test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_while_stmt.draco
proc main() void : while a do a := 3; od; corp;

