test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_od_as_identifier.draco
int od;
 
proc main() void : a := 1; corp;
